# Messenger

./: .gitignore  LICENSE  README.md
UI/: CMakeLists.txt  Main.qml  chat.qml  images.qrc  login.qml  main.cpp  signup.qml  welcome.qml
libs/Bot/: BotManager.cpp  BotManager.h  botTest.cpp
libs/ChatRoom/: CMakeLists.txt  ChatRoomManager.cpp  ChatRoomManager.h
libs/DataBase/: Database.cpp  Database.h
libs/Messaging/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.h
libs/User/: CMakeLists.txt  UserManager.cpp  UserManager.h
tests/: databasechatroom_test.cpp  databaseusermanager_test.cpp
